Fix promo structure on mobile

--- a/app/assets/stylesheets/components/page_specific/_promo.scss
+++ b/app/assets/stylesheets/components/page_specific/_promo.scss
@@ -10,6 +10,8 @@
 .promo__heading {
   @extend %font-heading-medium;
   @include body(24, 30);
+  display: block;
+  margin-bottom: $baseline-unit;
   margin-top: 0;
 
   .theme-cy & {
@@ -17,4 +19,9 @@
       @include body(18, 24);
     }
   }
+}
+
+.promo__content,
+.promo__heading {
+  @include column(12);
 }
